--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -12,7 +12,7 @@ author:
     affiliation   : "1"
   - name          : "Asha Hinson"
     affiliation   : "1"
-  - name          : "Lanee Jung(edit)"
+  - name          : "Lanee Jung"
     affiliation   : "1"     
 
 affiliation:
@@ -75,7 +75,7 @@ Self-objectification is a multidimensional process that accounts for the cogniti
 Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. 
 
 ##Interpersonal Objectification
-SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
+SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredrickson1998swimsuit]. We don't know about women-on-women interpersonal objectification. What might be different?
 
 Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
@@ -334,7 +334,7 @@ clark_physTSO_alpha <- psych::alpha(select(clark_final, tso_3, tso_5, tso_6, tso
 smith_funcTSO_alpha <- psych::alpha(select(smith_final, tso_1, tso_2, tso_4, tso_7, tso_9), check.keys=TRUE)$total[2]
 smith_physTSO_alpha <- psych::alpha(select(smith_final, tso_3, tso_5, tso_6, tso_8, tso_10), check.keys=TRUE)$total[2]
 ```
-Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire [@fredricksonetal1998; @nollfredrickson1998], which evaluates the extent to which individuals view their bodies in observable versus non-observable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
+Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire [@fredrickson1998swimsuit; @nollfredrickson1998], which evaluates the extent to which individuals view their bodies in observable versus non-observable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
 
 ###Description of the Samples
 Thirty-two previously unacquainted self-identifying female-sex dyads (64 total participants) from two liberal arts institutions in the Northeast of the United States participated in this study.  More specifically, twelve of the pairs, which derived from Sample 1, were students at a co-ed liberal arts college, while the remaining twenty pairs who came from Sample 2 attended a women’s liberal arts college. Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. For consistency, we limited participant data to same sex female pairs at the two colleges.
