--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -24,7 +24,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Objectification in Action: Self- and Other-Objectification in Same-gender Interactions},
-            pdfauthor={Randi L. Garcia, Kat Kyuchukova, \& Asha Hinson},
+            pdfauthor={Randi L. Garcia, Kat Kyuchukova, Asha Hinson, \& Lanee Jung},
             pdfkeywords={keywords},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -66,7 +66,8 @@
   \title{Objectification in Action: Self- and Other-Objectification in
 Same-gender Interactions}
     \author{Randi L. Garcia\textsuperscript{1, 2}, Kat
-Kyuchukova\textsuperscript{1}, \& Asha Hinson\textsuperscript{1}}
+Kyuchukova\textsuperscript{1}, Asha Hinson\textsuperscript{1}, \& Lanee
+Jung\textsuperscript{1}}
     \date{}
   
 \shorttitle{Objectification in Action}
@@ -138,62 +139,52 @@ coders Hannah et al.
 \begin{document}
 \maketitle
 
-OUTLINE - Introduction: Objectification theory says stuff. Recently
-we've learned about interpersonal objectification but we only know it
-about mixed gender. We know women objectify each other, but what about
-in interpersonal interactions? - Self-objectification - SSO versus TSO -
-Does this process of self-objectification also lead women to objectify
-other women? - Women objectifying other women - Lots of evidence, but we
-don't know if this happens interpersonally - Interpersonal
-objectifcation research is a whole thing now, but there are no studies
-(or theoretical models) that include women-on-women interpersonal
-objectification processes. - Relationships and objectification - Both
-romantic relationships and relationships in general have been studies in
-the context of objectification, but neither of these literatures have
-investigated specifically same-gender relationships. - Authenticity
-paragraph? - Current Study - Alternative predictions
-
-Roberts and Fredrickson (1997)\enquote{s Objectification Theory,
-suggests that women are objectified in interpersonal encounters, and
-that the effect might be strongest from men, but possibly also from
-women. Psychological researchers studying the sexual objectification of
-women, and the resulting self-objectification that follows, have in
-recent years explored the interpersonal process of the objectification -
-self-objectification link. For exmaple, in a face-to-face mixed-gender
+Roberts and Fredrickson (1997) Objectification Theory, suggests that
+women are objectified in interpersonal encounters, and that the effect
+might be strongest from men, but possibly also from women. Psychological
+researchers studying the sexual objectification of women, and the
+resulting self-objectification that follows, have in recent years
+explored the interpersonal process of the objectification -
+self-objectification link. For example, in a face-to-face mixed-gender
 dyadic study, Garcia, Earnshaw, and Quinn (2016) found that men's
-reported objectificaiton of their female interaction partner during an
-interaction was associated with increased sefl-objectification reported
+reported objectification of their female interaction partner during an
+interaction was associated with increased self-objectification reported
 by their partner. Gervais, Sáez, Riemer, and Klein (2020) has reviewed
 the literature on interpersonal self-objectification and has organized
 the the process in a theoretical model called the SIMO, but this model
-is only relevant for mixed-gender encouters. Although there is ample
+is only relevant for mixed-gender encounters. Although there is ample
 evidence that women objectify other women (Loughnan et al., 2015a; Puvia
 \& Vaes, 2013), there is currently no studies investigating the process
 of interpersonal objectification same-gender interactions. Does
 objectification by a female interaction partner have the same downstream
 negative consequences as being objectified by a male interaction
-partner? For example, perhaps women could be amplifying each others}
+partner? For example, perhaps women could be amplifying each others'
 self-objectification as they get ready to go out for the night,
 \emph{before} the theoretical encounters with men outlined in Gervais et
 al. (2020) occur.
 
+\subsection{Self-Objectification}\label{self-objectification}
+
 Self-objectification is a multidimensional process that accounts for the
 cognitive mechanism that translates experiences of sexualization at the
-cultural level to psychological (e.g., anxiety, self-esteem,
-authenticity, motivational states) and behavioral (cognitive
-performance, body monitoring) features of mental health and well-being
-at the individual level (Calogero, Tantleff-Dunn, \& Thompson, 2011;
-Moradi \& Huang, 2008). Calogero et al. (2011) proposes that the
-construct of self-objectification can be conceptualized as a learned
-trait. Furthermore, it can also be elicited momentarily, through the
-media, for example, with sexualized images in movies and magazines,
-which can lead to a state of self-objectification (Calogero et al.,
-2011, Moradi and Huang (2008)). Being objectified by another person and
-possessing trait-level self-objectification (TSO) may interact to
-influence experiences of feeling like a body, or state
-self-objectification (SSO) (CITE swimsuit sweater, Garcia et al., 2016).
-Does this habit self-objectification lead women to also objectify other
-women, possibly to compare oneself?
+cultural level (Loughnan et al., 2015a) to psychological (e.g., anxiety,
+self-esteem, authenticity, motivational states) and behavioral
+(cognitive performance, body monitoring) features of mental health and
+well-being at the individual level (Calogero, Tantleff-Dunn, \&
+Thompson, 2011; Moradi \& Huang, 2008). Calogero et al. (2011) proposes
+that the construct of self-objectification can be conceptualized as a
+learned trait. Furthermore, it can also be elicited momentarily, through
+the media, for example, with sexualized images in movies and magazines,
+which can lead to a state of self-objectification (Bernard, Legrand, \&
+Klein, 2018; Calogero et al., 2011; Moradi \& Huang, 2008). Being
+objectified by another person and possessing trait-level
+self-objectification (TSO) may interact to influence experiences of
+feeling like a body, or state self-objectification (SSO) (B. L.
+Fredrickson, Roberts, Noll, Quinn, \& Twenge, 1998, Garcia et al.
+(2016)). Does this habit self-objectification lead women to also
+objectify other women, possibly to compare oneself?
+
+\subsection{Women Objectifying Women}\label{women-objectifying-women}
 
 Some studies have found that women objectify other women to a greater
 extent than they objectify men (Loughnan et al., 2015a). Women objectify
@@ -207,24 +198,26 @@ objectification of women to a similar degree for men and women
 participants, although men scored high than women on a measure of belief
 that objectification of women is natural for men.
 
+\subsection{Interpersonal
+Objectification}\label{interpersonal-objectification}
+
 SIMO model and literature review (Gervais et al., 2020). Studies have
 shown that within social encounters women are gazed at more than men
-(Briton \& Hall, 1995, CITE saguy skype study, calogero video walking
-study), often times feel \enquote{looked at} within interpersonal
-interactions (Argyle \& Williams, 1969), and will more than likely
-internalize the objectifying gaze on physical self (Young, 1979).
-Moreover, perhaps the most adverse effect of objectifying treatment is
-that it effectively socializes girls and women to treat themselves as
-objects to be looked at and evaluated, an effect termed
-self-objectification (Bartky, 1990; Berger, Cohen, \& Zelditch Jr, 1972;
-L. Fredrickson, Roberts, M. Noll, Quinn, \& Twenge, 1998). We don't know
-about women-on-women interpersonal objectification. What might be
-different?
+(Briton \& Hall, 1995), often times feel \enquote{looked at} within
+interpersonal interactions (Argyle \& Williams, 1969; Miles-McLean et
+al., 2015), and will more than likely internalize the objectifying gaze
+on physical self (Puvia \& Vaes, 2013; Young, 1979). Moreover, perhaps
+the most adverse effect of objectifying treatment is that it effectively
+socializes girls and women to treat themselves as objects to be looked
+at and evaluated, an effect termed self-objectification (Bartky, 1990;
+Berger, Cohen, \& Zelditch Jr, 1972; B. L. Fredrickson et al., 1998). We
+don't know about women-on-women interpersonal objectification. What
+might be different?
 
 Self-objectification has been found to occur after a mere relationship
 prime among women (Sanchez \& Broccoli, 2008) because in our culture
-women need to look attractive to obtain and maintain successfuol
-relationship, thus, the ``college relationships condition may highten
+women need to look attractive to obtain and maintain successful
+relationship, thus, the ``college relationships condition may heighten
 self-objectification and the evaluation of other women in a sexualized
 way. Researchers have also studied interpersonal objectification and
 self-objectification in romantic relationships (Strelan \& Pagoudis,
@@ -234,17 +227,55 @@ relationship and they experience less SSO after appearance comments
 within romantic relationships (Meltzer, 2020), less is known about first
 dates. But this literature is also only about heterosexual
 relationships. A recent study has investigated the effect of
-self-objectification on the reduction of relationship biulding skills in
+self-objectification on the reduction of relationship building skills in
 general (including same-sex friendships) {[}CITE PWQ paper I reviewed,
 Yoder editor{]}. Empirical evidence reveals that objectification
 manifests through inauthenticity in romantic relationships (Brunell et
 al., 2010), adverse attitudes in regard to career aspirations, and a
 decrease in concentration and impairment in female cognitive performance
-(D. M. Quinn, Chaudoir, \& Kallen, 2011).
+(Kahalon, Shnabel, \& Becker, 2018; D. M. Quinn, Chaudoir, \& Kallen,
+2011). Both romantic relationships and relationships in general have
+been studies in the context of objectification, but neither of these
+literatures have investigated specifically same-gender relationships.
 
-MAYBE SEPARATE PARAGRAPH ABOUT AUTHENTICITY LINK SPECIFICALLY. And how
-woman-woman interpersonal objectificaiton preocesses might diverge from
-this process. {[}again CITE PWQ paper I reviewed, Yoder editor{]}.
+There is evidence that the experience of state self-objectification in
+mixed-gender contexts (stranger and romantic) and within the self in any
+moment (trying on a swimsuit) has negative consequences, but what about
+in the context of interaction with other women? Is the
+self-objectification experience in mixed-gender interactions the same as
+that experienced in same-gender interactions? The ample research
+demonstrating that the male gaze has a particularly detrimental effect
+would suggest no (Gay \& Castano, 2010; Gervais, Vescio, \& Allen, 2011;
+Saguy, Quinn, F Dovidio, \& Pratto, 2010, Calogero (2004)). Women do
+objectify other women (Harsey \& Zurbriggen, 2020; Loughnan et al.,
+2015a; Puvia \& Vaes, 2013), but when they do it, does it lead to
+self-objectification in the same way men's objectification of women does
+(Garcia et al., 2016)? If so, does the self-objectification experienced
+in these same-gender interactions have the same negative consequences
+for authenticity in that ineraction?
+
+\subsection{Interpersonal Objectification and
+Authenticity}\label{interpersonal-objectification-and-authenticity}
+
+There is some evidence that reduced authenticity is a consequence of
+self-objectification in the moment {[}Garcia et al. (2016); again CITE
+PWQ paper I reviewed, Yoder editor{]}. This link has been justified by
+the literature on stigmatized-stigmatizer interactions, viewing the
+experience of being objectified in an interaction as an identity threat
+situation. When a woman is objectified by a man, and then experiences
+self-objectification, this intergroup encounter might trigger identitiy
+threat, but is the same negative consequence present when a woman is
+objectified by another woman? woman-woman interpersonal objectification
+processes might diverge from this process. One the one hand, she may not
+be having the same negative consequences the cascade from situations
+that threated group-based identity (Deaux \& Major, 1987; Dovidio, Hebl,
+Richeson, \& Shelton, 2006; M. R. Hebl \& Dovidio, 2005), but feeling
+like a body, rather than a full human, in an interaction may be enough
+to reduce feelings of authenticity and social competence, regardless of
+the gender of the objectifyer {[}Tolman, Impett, Tracy, and Michael
+(2006); PWQ paper I reviewed, Yoder editor{]}.
+
+\subsection{The Current Study}\label{the-current-study}
 
 In the current study, we sought to examine what occurs during an
 interaction in which one or both partners are objectifying each other,
@@ -306,7 +337,7 @@ would keep the study closest to a replication of the previous Garcia et
 al. (2016) version of the study. Past research has found that women,
 largely due to an increase self-objectifying state, are indeed able to
 evaluate other women's potential as romantic partners--indeed, women may
-be unfortunutely used to thinking this way about themselves, and we
+be unfortunately used to thinking this way about themselves, and we
 suspect other women.
 
 Two participants were then brought into a larger interaction room where
@@ -437,15 +468,15 @@ for Sample 2).
 Self-Objectification}\label{state-self-objectification}
 
 To assess state self-objectification, we used an average of two items
-from Saguy, Quinn, F Dovidio, and Pratto (2010) that were also used in
-Garcia et al. (2016). Participants were asked to rank how much they
-agreed with the following statements: \enquote{During the interaction I
-felt more like a body than a full self} and \enquote{I felt more like a
-body than as a real person in the interaction}. Originally, Saguy et al.
-(2010) used 3 items, but in both samples the reliability of the scale
-was higher once the third item was removed, so we chose to only use the
-first two for our measure of SSO, leaving us with a reliable scale
-(\(\alpha\) = 0.84 for Sample 1, and \(\alpha\) = 0.85 for Sample 2.)
+from Saguy et al. (2010) that were also used in Garcia et al. (2016).
+Participants were asked to rank how much they agreed with the following
+statements: \enquote{During the interaction I felt more like a body than
+a full self} and \enquote{I felt more like a body than as a real person
+in the interaction}. Originally, Saguy et al. (2010) used 3 items, but
+in both samples the reliability of the scale was higher once the third
+item was removed, so we chose to only use the first two for our measure
+of SSO, leaving us with a reliable scale (\(\alpha\) = 0.84 for Sample
+1, and \(\alpha\) = 0.85 for Sample 2.)
 
 \subsubsection{Relationship Agency}\label{relationship-agency}
 
@@ -484,9 +515,9 @@ Sample 1, \(\alpha\) = 0.80 for Sample 2).
 Self-Objectification}\label{trait-self-objectification}
 
 Trait self-objectification (TSO) was assessed using the
-Self-Objectification Questionnaire (L. Fredrickson et al., 1998; M. Noll
-\& L. Fredrickson, 1998), which evaluates the extent to which
-individuals view their bodies in observable versus nonobservable ways.
+Self-Objectification Questionnaire (B. L. Fredrickson et al., 1998; M.
+Noll \& L. Fredrickson, 1998), which evaluates the extent to which
+individuals view their bodies in observable versus non-observable ways.
 The questionnaire asked participants to rank order both appearance and
 functional aspects of their bodies, from 1 (least important) to 10 (most
 important), with respect to physical self-concepts. Of the ten body
@@ -578,37 +609,37 @@ results of the analysis from this previous study. We hope to investigate
 how the central effects found in the previous study relate to
 interactions between two women. Specifically, we are interested in
 testing the relationship between state-other objectification and SSO,
-and how SSO in turn, affecs feelings of inauthenticity during the
+and how SSO in turn, affects feelings of inauthenticity during the
 interaction. In addition, we will also test if the effect of
 other-objectification in an interaction on SSO is only present for those
 women who are high in trait self-objectification, as in Garcia et al.
-(2016). Further, we will investigate the realtionships between
+(2016). Further, we will investigate the relationships between
 experiencing interaction inauthenticity and relationship agency, career
 aspirations, and cognitive performance.
 
 While Garcia et al. (2016) used dyadic path analysis, we will conduct
 our dyadic analyses using multilevel modeling. Dyadic analyses for
-distingishable dyads (e.g., mixed-gender interacting pairs) is more
-natural in Structual Equation Modeling (SEM) than it is for
+distinguishable dyads (e.g., mixed-gender interacting pairs) is more
+natural in Structural Equation Modeling (SEM) than it is for
 indistinguishable dayds (e.g., same-gender interacting pairs) (Garcia,
 Kenny, \& Ledermann, 2015; Ledermann \& Kenny, 2017). One reason for
-this asymmetry is that, due to the arbitrary distinctions made bewteen
+this asymmetry is that, due to the arbitrary distinctions made between
 \enquote{partner 1} and \enquote{partner 2} in indistinguishable dyads,
 many estimates need to be fixed to be equal (i.e., paths, variances,
 covariances, endogenous intercepts, and exogenous means) for
-indistinguishable dyads but these equality contraints should not then be
-considered in the degrees of freedom calculations for fit estimations
+indistinguishable dyads but these equality constraints should not then
+be considered in the degrees of freedom calculations for fit estimations
 (Olsen \& Kenny, 2006). Further, Olsen and Kenny (2006) detail how a new
 independence model and the corresponding fit measure should be
 re-calculated for indistinguishable dyads models. The current study uses
 dyadic multilevel modeling (MLM) to test all relationships and mediation
-paterns. The online supplementary materials contains analysis using SEM.
-See Ledermann and Kenny (2017) for a more complete discussion of the
-considerations for using SEM versus MLM for dyadic analysis.
+patterns. The online supplementary materials contains analysis using
+SEM. See Ledermann and Kenny (2017) for a more complete discussion of
+the considerations for using SEM versus MLM for dyadic analysis.
 
 Testing the Garcia et al. (2016) model on the current, same-gender,
 sample, involves using the Actor-Partner Independence Model (APIM)
-approch for each outcome variable (i.e., endogenous variable in
+approach for each outcome variable (i.e., endogenous variable in
 Figure~\ref{fig:2016figure}). Thus, we ran five APIM's to test all the
 hypothesized relationships. See Figure~\ref{fig:apim} for a basic APIM
 model. The APIM includes effects due to one's own, as well as one's
@@ -616,7 +647,7 @@ partner's, predictor variables (\(X\)'s) on the one's own outcome
 variable (\(Y\)). Unlike the original Garcia et al. (2016) study, our
 study deals with indistinguishable dyads, meaning the designation of who
 is designated as \enquote{actor} and who is designated as
-\enquote{partner} is arbitrary. Recall that the indistinguiahble nature
+\enquote{partner} is arbitrary. Recall that the indistinguishable nature
 of the dyads in the current study led us to choose the MLM approach over
 SEM. These analyses are considered exploratory, given the lack of prior
 research theorizing about these linkages.
@@ -629,8 +660,8 @@ models including sample as a control variable.
 
 \subsubsection{Combining Samples}\label{combining-samples}
 
-The correaltions between study variables is similar across samples. The
-realibialities for the study scales were also equivalent. (Note that the
+The correlations between study variables is similar across samples. The
+reliabilities for the study scales were also equivalent. (Note that the
 two samples were two small to conduct formal measurement equivalence
 tests for scales.) There are no statistically significant differences
 between samples in demographics including age, STATS, and ethnicity,
@@ -650,8 +681,8 @@ The most important finding from Garcia et al. (2016) was the significant
 partner effect of other objectification and SSO (specifically men's
 objectification of women and women's SSO). As expected, the partner
 effect of other-objectification on SSO in the current all-women sample
-was statistically signficant, \emph{b} = 0.29, \emph{SE} = 0.12,
-\emph{p} = .019, replicating Garcia et al. (2016)'s fiding. One's own
+was statistically significant, \emph{b} = 0.29, \emph{SE} = 0.12,
+\emph{p} = .019, replicating Garcia et al. (2016)'s finding. One's own
 other objectification had no effect on SSO, \emph{b} = -0.16, \emph{SE}
 = 0.12, \emph{p} = .210. Contrary to past finding however, there was no
 statistically significant interaction of partner's other objectification
@@ -665,22 +696,22 @@ interaction authenticity, although the estimate of this effect was in
 the hypothesized negative direction, \emph{b} = -0.09, \emph{SE} = 0.12,
 \emph{p} = .431. Because authenticity was a composite score of 9 items,
 two of which were interaction specific authenticity items, we also
-estimated the pairwise correlations bewteen SSO and all these items
+estimated the pairwise correlations between SSO and all these items
 individually. They were all small, ranging from only -0.01 to -0.14.
 Although we hypothesized that SSO would mediate the relationship between
 partner's other objectification and interaction authenticity, after
-finding no relationship bewteen SSO and authencity, we also tested if
+finding no relationship between SSO and authenticity, we also tested if
 the partner's other objectification had a direct effect on authenticity,
 but this effect was not significant, \emph{b} = 0.06, \emph{SE} = 0.12,
 \emph{p} = .608 (nor was the total effect of partner's other
 objectification on authenticity, \emph{b} = 0.03, \emph{SE} = 0.11,
 \emph{p} = .787).
 
-Lastly, althought there was no evidence that SSO was related to
+Lastly, although there was no evidence that SSO was related to
 interaction authenticity in the current sample, we tested if interaction
 authenticity (composite of nine items) had effects on cognitive
-performace, career aspirations, and relationship agency, as it did in
-Garcia et al. (2016). We again used MLM and thus, these efefcts were
+performance, career aspirations, and relationship agency, as it did in
+Garcia et al. (2016). We again used MLM and thus, these effects were
 tested in three separate models. There was no significant effect of
 interaction authenticity on cognitive performance, \emph{b} = 0.32,
 \emph{SE} = 0.28, \emph{p} = .258, but authenticity was significantly
@@ -688,14 +719,14 @@ positively related to both career aspirations, \emph{b} = 0.18,
 \emph{SE} = 0.07, \emph{p} = .010, and relationships agency, \emph{b} =
 0.23, \emph{SE} = 0.12, \emph{p} = .049. There was no direct effect of
 SSO on cognitive performance, \emph{b} = 0.04, \emph{SE} = 0.25,
-\emph{p} = .872, and no direct effect of partner's other objectificaiton
-on cognifitve performance, \emph{b} = 0.01, \emph{SE} = 0.27, \emph{p} =
+\emph{p} = .872, and no direct effect of partner's other objectification
+on cognitive performance, \emph{b} = 0.01, \emph{SE} = 0.27, \emph{p} =
 .962. There was no direct effect of SSO on career aspirations, \emph{b}
 = 0.03, \emph{SE} = 0.06, \emph{p} = .657, and no direct effect of
-partner's other objectificaiton on career aspirations, \emph{b} = -0.06,
+partner's other objectification on career aspirations, \emph{b} = -0.06,
 \emph{SE} = 0.07, \emph{p} = .378. There was no direct effect of SSO on
 relationship agency, \emph{b} = -0.05, \emph{SE} = 0.11, \emph{p} =
-.659, and no direct effect of partner's other objectificaiton on
+.659, and no direct effect of partner's other objectification on
 relationship agency, \emph{b} = -0.1, \emph{SE} = 0.11, \emph{p} = .365.
 
 The results were similar for analyses conducted on Sample 1 and Sample 2
@@ -720,7 +751,7 @@ Discrimination}\label{sexism-and-sexual-discrimination}
 Sexism has recently been found to be related to the objectification of
 women, but not men, for both men and women (Harsey \& Zurbriggen, 2020).
 Empirical evidence illustrates how women continue to be objects of
-interpersonal discrimination and expereince daily sexist hassles (Swim,
+interpersonal discrimination and experience daily sexist hassles (Swim,
 Hyers, Cohen, \& Ferguson, 2001). One form of interpersonal
 discrimination women face is the process by which their whole being is
 viewed as a collection of sexualized body parts valued predominantly for
@@ -766,7 +797,7 @@ ethnicities are exposed to varied amounts of sexulizing content.
 
 Also, future experiments or longitudinal studies should explore the
 external validity of the notions of self-objectification and how the
-operalization of self-objectification may be improved.
+operationalization of self-objectification may be improved.
 
 \subsubsection{Alternative Model}\label{alternative-model}
 
@@ -826,6 +857,12 @@ Berkelaar, M., \& others. (2015). \emph{LpSolve: Interface to
 'lp\_solve' v. 5.5 to solve linear/integer programs}. Retrieved from
 \url{https://CRAN.R-project.org/package=lpSolve}
 
+\hypertarget{ref-bernard2018bodies}{}
+Bernard, P., Legrand, S., \& Klein, O. (2018). From bodies to blame:
+Exposure to sexually objectifying media increases tolerance toward
+sexual harassment. \emph{Psychology of Popular Media Culture},
+\emph{7}(2), 99.
+
 \hypertarget{ref-briton1995}{}
 Briton, N. J., \& Hall, J. A. (1995). Beliefs about female and male
 nonverbal communication. \emph{Sex Roles}, \emph{32}(1-2), 79--90.
@@ -843,6 +880,11 @@ fashion magazine advertisements: Impact on visual attention and
 relationship with body dissatisfaction. \emph{Body Image}, \emph{16},
 1--9.
 
+\hypertarget{ref-calogero2004test}{}
+Calogero, R. M. (2004). A test of objectification theory: The effect of
+the male gaze on appearance concerns in college women. \emph{Psychology
+of Women Quarterly}, \emph{28}(1), 16--21.
+
 \hypertarget{ref-calogero2011}{}
 Calogero, R. M., Tantleff-Dunn, S. E., \& Thompson, J. (2011).
 \emph{Self-objectification in women: Causes, consequences, and
@@ -852,6 +894,15 @@ counteractions.} American Psychological Association.
 Dahl, D. B., Scott, D., Roosen, C., Magnusson, A., \& Swinton, J.
 (2019). \emph{Xtable: Export tables to latex or html}. Retrieved from
 \url{https://CRAN.R-project.org/package=xtable}
+
+\hypertarget{ref-deaux1987putting}{}
+Deaux, K., \& Major, B. (1987). Putting gender into context: An
+interactive model of gender-related behavior. \emph{Psychological
+Review}, \emph{94}(3), 369.
+
+\hypertarget{ref-dovidio2006nonverbal}{}
+Dovidio, J. F., Hebl, M., Richeson, J. A., \& Shelton, J. N. (2006).
+Nonverbal communication, race, and intergroup interaction.
 
 \hypertarget{ref-frasernicholson1989}{}
 Fraser, N., \& Nicholson, L. (1989). Social criticism without
@@ -864,6 +915,12 @@ Fredrickson, B. L., Hendler, L. M., Nilsen, S., O'Barr, J. F., \&
 Roberts, T.-A. (2011). Bringing back the body. \emph{Psychology of Women
 Quarterly}, \emph{35}(4), 689--696.
 doi:\href{https://doi.org/10.1177/0361684311426690}{10.1177/0361684311426690}
+
+\hypertarget{ref-fredrickson1998swimsuit}{}
+Fredrickson, B. L., Roberts, T.-A., Noll, S. M., Quinn, D. M., \&
+Twenge, J. M. (1998). That swimsuit becomes you: Sex differences in
+self-objectification, restrained eating, and math performance.
+\emph{Journal of Personality and Social Psychology}, \emph{75}(1), 269.
 
 \hypertarget{ref-R-irr}{}
 Gamer, M., Lemon, J., \&
@@ -882,16 +939,31 @@ Garcia, R. L., Kenny, D. A., \& Ledermann, T. (2015). Moderation in the
 actor--partner interdependence model. \emph{Personal Relationships},
 \emph{22}(1), 8--29.
 
+\hypertarget{ref-gay2010my}{}
+Gay, R. K., \& Castano, E. (2010). My body or my mind: The impact of
+state and trait objectification on women's cognitive resources.
+\emph{European Journal of Social Psychology}, \emph{40}(5), 695--703.
+
 \hypertarget{ref-gervais2020social}{}
 Gervais, S. J., Sáez, G., Riemer, A. R., \& Klein, O. (2020). The social
 interaction model of objectification: A process model of goal-based
 objectifying exchanges between men and women. \emph{British Journal of
 Social Psychology}, \emph{59}(1), 248--283.
 
+\hypertarget{ref-gervais2011you}{}
+Gervais, S. J., Vescio, T. K., \& Allen, J. (2011). When what you see is
+what you get: The consequences of the objectifying gaze for women and
+men. \emph{Psychology of Women Quarterly}, \emph{35}(1), 5--17.
+
 \hypertarget{ref-harsey2020men}{}
 Harsey, S. J., \& Zurbriggen, E. L. (2020). Men and women's
 self-objectification, objectification of women, and sexist beliefs.
 \emph{Self and Identity}, 1--8.
+
+\hypertarget{ref-hebl2005promoting}{}
+Hebl, M. R., \& Dovidio, J. F. (2005). Promoting the ``social'' in the
+examination of social stigmas. \emph{Personality and Social Psychology
+Review}, \emph{9}(2), 156--182.
 
 \hypertarget{ref-R-purrr}{}
 Henry, L., \& Wickham, H. (2019). \emph{Purrr: Functional programming
@@ -913,17 +985,16 @@ Self-objectification, body image disturbance, and eating disorder
 symptoms in young australian children. \emph{Body Image}, \emph{11}(3),
 290--302.
 
+\hypertarget{ref-kahalon2018don}{}
+Kahalon, R., Shnabel, N., \& Becker, J. C. (2018). ``Don't bother your
+pretty little head'' appearance compliments lead to improved mood but
+impaired cognitive performance. \emph{Psychology of Women Quarterly},
+\emph{42}(2), 136--150.
+
 \hypertarget{ref-R-ggformula}{}
 Kaplan, D., \& Pruim, R. (2017). \emph{Ggformula: Formula interface to
 the grammar of graphics}. Retrieved from
 \url{https://CRAN.R-project.org/package=ggformula}
-
-\hypertarget{ref-fredricksonetal1998}{}
-L. Fredrickson, B., Roberts, T.-A., M. Noll, S., Quinn, D., \& Twenge,
-J. (1998). That swimsuit becomes you: Sex differences in
-self-objedification, restrained eating, and math performance.
-\emph{Journal of Personality and Social Psychology}, \emph{75}, 269--84.
-doi:\href{https://doi.org/10.1037/0022-3514.75.1.269}{10.1037/0022-3514.75.1.269}
 
 \hypertarget{ref-ledermann2017analyzing}{}
 Ledermann, T., \& Kenny, D. A. (2017). Analyzing dyadic data with
@@ -958,6 +1029,12 @@ methodological note. \emph{Basic and Applied Social Psychology},
 Meltzer, A. L. (2020). Women can benefit from sexual and physical
 valuation in the context of a romantic relationship. \emph{Personality
 and Social Psychology Bulletin}, \emph{46}(2), 243--257.
+
+\hypertarget{ref-miles2015stop}{}
+Miles-McLean, H., Liss, M., Erchull, M. J., Robertson, C. M., Hagerman,
+C., Gnoleba, M. A., \& Papp, L. J. (2015). ``Stop looking at me!''
+interpersonal sexual objectification as a source of insidious trauma.
+\emph{Psychology of Women Quarterly}, \emph{39}(3), 363--374.
 
 \hypertarget{ref-moradi2008}{}
 Moradi, B., \& Huang, Y.-P. (2008). Objectification theory and
@@ -1070,6 +1147,12 @@ Everyday sexism: Evidence for its incidence, nature, and psychological
 impact from three daily diary studies. \emph{Journal of Social Issues},
 \emph{57}(1), 31--53.
 doi:\href{https://doi.org/10.1111/0022-4537.00200}{10.1111/0022-4537.00200}
+
+\hypertarget{ref-tolman2006looking}{}
+Tolman, D. L., Impett, E. A., Tracy, A. J., \& Michael, A. (2006).
+Looking good, sounding good: Femininity ideology and adolescent girls'
+mental health. \emph{Psychology of Women Quarterly}, \emph{30}(1),
+85--95.
 
 \hypertarget{ref-R-ggplot2}{}
 Wickham, H. (2016). \emph{Ggplot2: Elegant graphics for data analysis}.
